toggle menu fixing

--- a/Silicon_MVC/Views/Contact/Index.cshtml
+++ b/Silicon_MVC/Views/Contact/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<section class="contact">
+﻿<section class="contact" id="contactus">
             <div class="container">
                 <div class="content">
                     <a class="home-and-contact" asp-controller="Default" asp-action="Home">
