--- a/Silicon_MVC/wwwroot/css/scss/sections/_details.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_details.scss
@@ -45,7 +45,7 @@
             a {
                 display: block;
                 margin-top: 10px;
-                //text-align: center;
+                text-align: left;
 
                 i {
                     color: $gray-700;
@@ -160,7 +160,6 @@
 
                         span {
                             color: $gray-400;
-
                             font-weight: 400;
                         }
                     }
