logo dark-light

--- a/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
@@ -9,7 +9,7 @@
     <div class="container">
         
 
-        <a class="logo" asp-controller="Default" asp-action="Home"><img src="~/images/Silicon-Logotype -Light-Mode.svg" alt="Silicon"></a>
+        <a class="logo" asp-controller="Default" asp-action="Home"><img alt="Silicon" src="~/images/Silicon-Logotype -Light-Mode.svg" id="logo"></a>
        
 
         <div id="menu" class="hide menu-nav">
