--- a/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
@@ -21,8 +21,8 @@
 
                 @if (_signInManager.IsSignedIn(User))
                 {
-                        <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-                        <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
+                    <a class="menu-link" asp-controller="Courses" asp-action="Index" asp-fragment="courses">Courses</a>
+                    <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
                     @if(User.IsInRole("SuperAdmin"))
                     {
                         <a class="menu-link" asp-controller="Admin" asp-action="Index">Admin Portal</a>
