--- a/Silicon_MVC/wwwroot/css/scss/sections/_header.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_header.scss
@@ -73,8 +73,8 @@ header {
             gap: 1rem;
             margin-top: 40px;
 
-            @include lg {
-                margin-top: 0;
+            @include xl {
+                margin-top: 10px;
             }
         }
 
@@ -88,7 +88,7 @@ header {
                 height: 100%;
             }
 
-            @include lg {
+            @include xl {
                 width: 40px;
                 height: 40px;
             }
