--- a/Silicon_MVC/wwwroot/css/site.css
+++ b/Silicon_MVC/wwwroot/css/site.css
@@ -795,9 +795,9 @@ header .container .account-buttons {
   gap: 1rem;
   margin-top: 40px;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   header .container .account-buttons {
-    margin-top: 0;
+    margin-top: 10px;
   }
 }
 header .container .profile-img {
@@ -809,7 +809,7 @@ header .container .profile-img img {
   width: 100%;
   height: 100%;
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   header .container .profile-img {
     width: 40px;
     height: 40px;
